# T_E_T

./: .env.sample  .flake8  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yaml
config/: settings.py  urls.py
telega/: serializers.py  services.py  urls.py  views.py
telega/management/commands/: telagram_bot.py
tracker/: models.py  serializers.py  services.py  tests.py  urls.py  validators.py  views.py
tracker/migrations/: 0001_initial.py  0002_initial.py
users/: admin.py  models.py  permissions.py  serializers.py  tasks.py  urls.py  views.py
users/migrations/: 0001_initial.py
