[project]
name = "t-e-t"
version = "0.1.0"
description = "Track Everything Today"
authors = [
    {name = "Yurii",email = "yurii.1986.e@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
